--- a/data_wrangling_1_lec5.Rmd
+++ b/data_wrangling_1_lec5.Rmd
@@ -1,9 +1,8 @@
 ---
-title: "Simple document"
+title: "lec5"
 output: github_document
 ---
 
-## lec 5
 
 ```{r setup, warning=FALSE}
 #load packages
