--- a/data_wrangling_2_lec6.Rmd
+++ b/data_wrangling_2_lec6.Rmd
@@ -19,7 +19,7 @@ head(litters_df)
 
 ```
 
-### select, select helper functions, rename
+### select, select helper functions, rename, relocate
 ```{r}
 #specify names of columns to keep 
 select(litters_df, 
