--- a/data_wrangling_1_lec7.Rmd
+++ b/data_wrangling_1_lec7.Rmd
@@ -3,3 +3,166 @@ title: "data_wrangling_1_lec7"
 output: github_document
 date: "2024-09-29"
 ---
+
+```{r setup, warning=FALSE, message=FALSE}
+library(tidyverse)
+options(tibble.print_min=5)
+```
+
+## pivot_longer
+```{r}
+#read data
+pulse_df = haven::read_sas("./data/public_pulse_data.sas7bdat") |>
+  janitor::clean_names()
+
+pulse_df
+
+```
+
+create multiple records for observation times
+```{r}
+
+pulse_tidy_df = pivot_longer(
+  pulse_df, 
+bdi_score_bl:bdi_score_12m, 
+names_to="visit",
+values_to="bdi")
+
+pulse_tidy_df
+```
+
+remove bdi_score_prefix in 'visit' column
+```{r}
+pulse_tidy_df = pivot_longer(
+  pulse_df,
+  bdi_score_bl:bdi_score_12m, 
+  names_to = "visit",
+  names_prefix="bdi_score_",
+  values_to="bdi")
+
+pulse_tidy_df
+```
+
+don't create intermediate datasets
+change bl to 00m
+convert 'visit' variable to a factor variable
+
+```{r}
+pulse_df = haven::read_sas("./data/public_pulse_data.sas7bdat") |>
+  janitor::clean_names() |> 
+  pivot_longer(
+  bdi_score_bl:bdi_score_12m, 
+  names_to = "visit",
+  names_prefix="bdi_score_",
+  values_to="bdi") |>
+  mutate(
+    visit = replace(visit, visit=="bl", "00m"),
+    visit = factor(visit)
+  )
+
+pulse_df
+```
+
+
+## pivot_wider
+tidy dataset
+- good for further analysis
+```{r}
+analysis_results = 
+  tibble(
+    group = c("treatment",
+              "treatment",
+              "placebo",
+              "placebo"
+              ),
+    time = c("pre",
+             "post",
+             "pre",
+             "post"),
+    mean = c(4, 8, 3.5, 4)
+      
+    )
+
+analysis_results
+```
+
+untidy data using pivot_wider()
+- good for human readability
+- opposite of pivot_longer()
+```{r}
+pivot_wider(analysis_results, 
+            names_from="time",
+            values_from="mean")
+```
+
+
+## binding rows
+
+create tidy dataset from untidy data spread across multiple tables
+- create variable 'movie'
+```{r}
+
+#multiple tables
+fellowship_ring = 
+  readxl::read_excel("./data/LotR_Words.xlsx", range = "B3:D6") |>
+  mutate(movie = "fellowship_ring")
+
+two_towers = 
+  readxl::read_excel("./data/LotR_Words.xlsx", range = "F3:H6") |>
+  mutate(movie = "two_towers")
+
+return_king = 
+  readxl::read_excel("./data/LotR_Words.xlsx", range = "J3:L6") |>
+  mutate(movie = "return_king")
+
+```
+
+bind tables together
+```{r}
+lotr_tidy = 
+  bind_rows(fellowship_ring, two_towers, return_king) |>
+  janitor::clean_names() |>
+  pivot_longer(
+    female:male,
+    names_to = "gender", 
+    values_to = "words") |>
+  mutate(race = str_to_lower(race)) |> 
+  select(movie, everything()) 
+
+lotr_tidy
+```
+
+## joining datasets
+
+```{r}
+
+pup_df = 
+  read_csv(
+    "./data/FAS_pups.csv",
+    na = c("NA", "", ".")) |>
+  janitor::clean_names() |>
+  mutate(
+    sex = 
+      case_match(
+        sex, 
+        1 ~ "male", 
+        2 ~ "female"),
+    sex = as.factor(sex)) 
+
+litter_df = 
+  read_csv(
+    "./data/FAS_litters.csv",
+    na = c("NA", ".", "")) |>
+  janitor::clean_names() |>
+  separate(group, into = c("dose", "day_of_tx"), sep = 3) |>
+  relocate(litter_number) |>
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    dose = str_to_lower(dose))
+
+fas_df = 
+  left_join(pup_df, litter_df, by = "litter_number")
+
+fas_df
+```
+
